# topolang

./: Cargo.toml  LICENSE-MIT  README.md  index.html  rustfmt.toml
.cargo/: config.toml
docs/: index.html
docs/pkg/: README.md  package.json  topolang.js
experiments/js_paste_button/: button.html  button.js  timer.html  timer.js
notes/: bridges.md  cargo.md  cut_paste_ops.md  eframe_web.md  glsl_style.md  logging.md  mouse_event_rate.md  notation.md  optimizations.md  profiling.md  regex.txt  rule_application_glow_effect.aseprite  rule_frame_ideas.aseprite  rust.md  rust_snippets.md  sleep_pattern_ideas.aseprite  solid_pattern_ideas.aseprite  speedup_colormap_to_topology.md  srgb.md  tasks.md  topology_terms.md  tracy_stacktrace_missing.md  transformation_groups.md  wasm.md  world_queries_and_ops.md
pages/: README.md
pages/pkg/: README.md  topolang.d.ts  topolang_bg.wasm.d.ts
resources/: rule_frame.aseprite  rule_frame_experiments.aseprite
resources/fonts/: capital_hill_minimal.aseprite  licenses.txt  links.txt  monogram.json  public_pixel.json
resources/icons/: source.txt
resources/shaders/: grid.frag  grid.vert  selection.frag  selection.vert  tile.frag  tile.vert
src/: app.rs  area_bounds.rs  area_cover.rs  array_2d.rs  benchmarks.rs  bitmap.rs  brush.rs  camera.rs  compiler.rs  connected_components.rs  coordinate_frame.rs  cycle_segments.rs  demos.rs  field.rs  frozen.rs  gif_recorder.rs  history.rs  interpreter.rs  lib.rs  line_drawing.rs  main.rs  material.rs  material_effects.rs  morphism.rs  new_regions.rs  pattern.rs  pixmap.rs  reduce.rs  regions.rs  rule.rs  rule_activity.rs  rule_activity_effect.rs  run_mode.rs  seam_graph.rs  serialize.rs  solid.rs  topology.rs  union_find.rs  utils.rs  view.rs  (+2 more)
src/math/: affine_map.rs  arrow.rs  axis_line.rs  direction.rs  generic.rs  interval.rs  matrix2.rs  matrix3.rs  mod.rs  pixel.rs  point.rs  rect.rs  rgba8.rs  turn.rs
src/painting/: checkerboard_painter.rs  gl_buffer.rs  gl_garbage.rs  gl_texture.rs  glow_painter.rs  grid_painter.rs  line_painter.rs  material_map_painter.rs  mod.rs  nice_line_painter.rs  rect_painter.rs  rect_vertices.rs  rule_activity_painter.rs  scene_painter.rs  selection_outline_painter.rs  selection_painter.rs  shader.rs  sprite_painter.rs  tile_painter.rs  tile_store.rs  topology_painter.rs  view_painter.rs  wave_painter.rs
src/painting/shaders/: checkerboard.frag  checkerboard.vert  fill_rect.frag  fill_rect.vert  glow.frag  grid.frag  grid.vert  line.frag  line.vert  material.frag  material.vert  nice_line.frag  nice_line.vert  tile.frag  tile.vert  wave.frag  wave.vert
src/palettes/: mod.rs  palettes.md
src/rule_images/: mouse_ideas.aseprite
src/solver/: constraints.rs  element.rs  mod.rs  plan.rs  propagations.rs
test_resources/regions/: a.aseprite
test_resources/regions/mark_tile_interface/: a.aseprite  b.aseprite
test_resources/rules/: frame.aseprite
tutorial/: basics.aseprite  final.pdn  fonts.txt  inkscape_export.txt  sleep.aseprite  solid.aseprite  tutorials.md
