[package]
name = "seamlang_bin"
version = "0.1.0"
edition = "2021"

[lib]
name = "seamlang"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
egui = { version = "0.30.0" }
#egui_glow = { version = "0.27.2" }
glow = "0.16.0"
wasm-bindgen-futures = "0.4"
log = "0.4"
env_logger = "0.11.3"

# memoffset = "0.9.1"
by_address = "1.2.1"
image = { version = "0.25.1", default-features = false, features = [ "png", "gif" ] }
itertools = "0.13.0"
petgraph = "0.6.5"
#arboard = "3.2.1"
#weak-table = "0.3.2"
bytemuck = { version = "1.16.1", features = ["derive"] }
data-encoding = "2.6.0"
smallvec = { version = "1.13.1", features = ["union", "const_generics", "const_new"] }
# num-integer = { version = "0.1.45", features = ["i128"] }
bimap = "0.6.3"
num-traits = "0.2.19"
anyhow = { version = "1.0.86", features = ["backtrace"] }
hex = "0.4.3"
arrayvec = "0.7.4"
pretty_assertions = "1.4.0"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
rfd = "0.14.1"
static_assertions = "1.1.0"
walkdir = "2.5.0"
ahash = "0.8.11"

#slotmap = "1.0.7"
# dlv-list = "0.5.1"
# fastrand = "2.0.1"

#[dev-dependencies]
#rstest = "0.21.0"

[profile.release]
debug = 1
