[package]
name = "seamlang_bin"
version = "0.1.0"
edition = "2021"

[lib]
name = "seamlang"
crate-type = ["cdylib", "rlib"]

[features]
# Force the app to update at 120Hz and disable vsync, for reduced latency. Hack, for experiments only
default = []
force_120hz = []

[dependencies]
wasm-bindgen = "0.2"
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
egui = { version = "0.30.0" }
egui_extras = { version = "0.30.0", features = ["image"] }
egui_glow = "0.30.0"
glow = "0.16.0"
wasm-bindgen-futures = "0.4"
log = "0.4"
env_logger = "0.11.3"

image = { version = "0.25.5", default-features = false, features = ["png", "gif"] }
itertools = "0.14.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
data-encoding = "2.6.0"
smallvec = { version = "1.13.1", features = ["union", "const_generics", "const_new"] }
num-traits = "0.2.19"
anyhow = { version = "1.0.95", features = ["backtrace"] }
web-time = "1.1.0"
rfd = { version = "0.15.2", default-features = false, features = ["gtk3"] }
#walkdir = "2.5.0"

# https://github.com/tkaitchuck/aHash/blob/7d5c661a74b12d5bc5448b0b83fdb429190db1a3/compare/readme.md?plain=1#L38C1-L38C152
# If neither `std` or `compile-time-rng` flags are enabled aHash will fall back on using the numeric value of
# memory addresses as a source of randomness.
# Meh good enough, otherwise it's a hassle with WASM
ahash = { version ="0.8.11", default-features = false, features = ["std" ] }
web-sys = "0.3.77"

#[dev-dependencies]
#rstest = "0.21.0"

[profile.release]
debug = 1
